# MoscowProm

./: .env.example  .gitignore  EMOJI_REMOVAL_REPORT.py  ERRORS_QUICK_GUIDE.md  ERROR_HANDLING.md  EXCEL_FIX_REPORT.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_COMPLETE.md  STRICT_ERROR_FORMAT.md  alembic.ini  analyze_columns.py  app.py  check_data.py  check_district_columns.py  check_district_data.py  check_excel.py  clean_styles.py  clear_database.py  config.py  docker-compose.yaml  pyproject.toml  rebuild_styles.py  redis.conf  remove_all_emoji.py  replace_colors.py  settings.toml  test_error_handling.py  test_excel_row.py  test_export.py  test_fullpage_upload.py  test_green_header.py  test_new_upload_interface.py  test_strict_error_format.py  test_upload.py  test_upload_json.py  update_templates.py
alembic/: env.py
alembic/versions/: 2025_10_17_1936-c587b49c593d_.py  2025_10_17_2353-6c2b42d6ee9f_initial_migration_with_all_tables.py  2025_10_19_0122-b876c1441a7d_.py  2025_10_19_0133-fcc51cef328f_.py
app/: __init__.py  crud.py  logger.py  main.py  models.py  redis_client.py  routes.py  schemas.py
app/api/: __init__.py  routes.py  schemas.py
app/db/: __init__.py  crud.py  database.py  models.py
app/dependencies/: __init__.py  templates.py
app/routers/: __init__.py  analytics.py  fns.py  organization_analytics.py  organizations.py  upload.py
app/services/: __init__.py  excel_exporter.py  excel_processor.py  excel_processor_v2.py  fns_api.py
app/templates/: analytics.html  analytics_new.html  index.html  (+8 more)
(+1 files in other folders)
